<resources>
    <string name="app_name">UGShop</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--    Landing page strings-->
    <string name="location_tet">Location</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="forget_pswd">Forgot Password</string>
    <string name="name">Name</string>
    <string name="mobile_number">MobileNumber</string>
    <string name="sign_up">SignUp</string>
    <string name="sign_success">SignUp Success</string>


    <!--   Login Tab Strings-->
    <string-array name="login_tabs">
        <item>Login</item>
        <item>Signup</item>
    </string-array>

    <!--  Toast Messages  -->
    <string name="login_failed">Login Failed</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="category_failed">Category Fetch Failed</string>
    <string name="add_to_cart_failed">Add To Cart Failed</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="search">Search</string>
    <string name="cartAdded">Cart added</string>
    <string name="add_address_failed">Failed</string>
    <string name="address_added">Address Added</string>
    <string name="suggestion_to_addAddress">Please add your address</string>
    <string name="something_error">Something error</string>
    <string name="no_products_available">No products are currently available at your location</string>
    <string name="item_added_to_cart">Product added to cart successfully</string>
    <string name="get_products_list_failed">Get Products Failed!</string>
    <string name="OTP_Send_Sucessfully">OTP Send Sucessfully</string>
    <string name="fetching_data_Error">fetching_data_Error</string>
    <string name="password_send">Password send</string>
    <string name="check_connection">Check your connection</string>
    <string name="user_already_exist">User already exist</string>
    <string name="verify_account">Please verify your account first</string>
    <string name="account_deactivated">Account Deactivated</string>

    <string-array name="men_sub_cat">
        <item>Shirt</item>
        <item>T-Shirt</item>
        <item>Trouser</item>
        <item>Shorts</item>
    </string-array>

    <string-array name="women_sub_cat">
        <item>Kurtis</item>
        <item>Tees</item>
        <item>Tops</item>
        <item>Trouser</item>
    </string-array>

    <string-array name="kid_sub_cat">

        <item>Shirt</item>
        <item>Trouser</item>

    </string-array>
</resources>