<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fifteen_dp">

    <EditText
        android:id="@+id/name"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@drawable/edit_text"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mobile_number"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@drawable/edit_text"
        android:hint="@string/mobile_number"
        android:imeOptions="actionNext"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <EditText
        android:id="@+id/email_signup"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@drawable/edit_text"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobile_number" />

    <EditText
        android:id="@+id/password_signup"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_signup" />

    <EditText
        android:id="@+id/confirm_password"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_signup" />

    <Button
        android:id="@+id/Signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty_dp"
        android:background="@drawable/button_bg"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintWidth_percent=".8" />


</androidx.constraintlayout.widget.ConstraintLayout>